app/styles/layout/story/_story-content.scss
.lead-content {
  background-color: lighten($masthead-black, 15%);
  display: table;
  margin: 0 0 1.5em;
  position: relative;
  width: 100%;
}

.lead-image {
  background-image: url('/images/ShaleLife-background-placeholder.gif');
  background-position: center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;

  @include media($bp-shale-lg) {
    background-image: url('/images/ShaleLife-background-placeholder.gif');
  }
}

// Header

.lead-header,
.story-box {
  @extend %content-block;
  display: block;
  position: relative;
  text-align: center;
  vertical-align: middle;
  @include span-columns(12);
  @include media($bp-shale-med) {
    @include span-columns(10 of 12);
    @include shift(1);
  }

  @include media($bp-shale-lg) {
    @include span-columns(10 of 12);
    @include shift(1);
  }
}

.lead-header {
  min-height: 450px;
  h1 {
    padding-top: 10%;
  }

  @include media($bp-landing-large) {
    h1 {
      font-size: 12em;
    }
  }

  @include media($bp-landing-medium) {
    h1 {
      font-size: 9em;
    }
  }

  @include media($bp-landing-small) {
    h1 {
      font-size: 5em;
    }
  }

}

.lead-text {
  color: $white;
  font-size: 1.1em;
  text-align: left;

  p {
    font-weight: 400;
  }

  a {
    text-decoration: none;

    &:hover {
      color: $light-denim;
    }
  }
}


.slide-box {
  @include span-columns(12);
  @include media($bp-shale-lg) {
    @include span-columns(10);
    @include shift(1);
  }

  img {
    margin-bottom: 1em;
    width: 100%;
  }
}

.slideshow-title {
  @include span-columns(6 of 10);

  h4 {
    color: $white;
    font-size: 1.3em;
    font-weight: 500;
    text-align: left;
  }
}

.slide-count {
  @include span-columns(4 of 10);
  @include omega();

  p {
    text-align: right;
  }
}

.slideshow-start {
  @include span-columns(10);
  margin: 0 0 .5em 6em;
}

.slideshow-caption {
  @include span-columns(12);
  margin: 3em 0 0;
  @include media($bp-shale-med) {
    margin: 0;
  }

  @include media($bp-shale-lg) {
    margin: 0;
  }
}

.slideshow-start,
.slideshow-caption {
  @include media($bp-shale-med) {
    @include span-columns(7);
    @include shift(0);
    margin-left: 5em;
    text-align: left;
  }

  @include media($bp-shale-lg) {
    @include span-columns(6);
    margin-left: 12em;
    text-align: left;
  }
}

.supporters-prompt {
  // @extend %content-block;
  @include span-columns(12);
  margin: 0 0 .5em;

  @include media($bp-shale-med) {
    @include span-columns(8);
    text-align: left;
  }

  @include media($bp-shale-lg) {
    @include span-columns(8);
    text-align: left;
  }
}

.share-story {
  @include span-columns(12);
  border-top: 2px solid $yellow;
  margin: 1em 0;
  padding-top: 1em;

  @include media($bp-shale-med) {
    @include span-columns(3);
    @include omega();
    border-left: 2px solid $yellow;
    border-top: 0;
    margin: 0;
    padding-top: 0;
  }

  @include media($bp-shale-lg) {
    @include span-columns(3);
    @include omega();
    border-left: 2px solid $yellow;
    border-top: 0;
    margin: 0;
    padding-top: 0;
  }

  .fa-stack {
    color: $off-white;

    &:hover {
      color: $light-denim;
    }
  }

  .fa-facebook,
  .fa-twitter {
    color: $dark-denim;
  }
}

.story-box {
  background-color: $tan-transparent;
}

.story {
  position: absolute;
  text-align: center;
  vertical-align: middle;
}

.story-prose {
  margin-top: 1em;
  @include span-columns(12);

  @include media($bp-shale-lg) {
    @include span-columns(6 of 10);
  }

  @include media($bp-shale-med) {
    @include span-columns(6 of 10);
  }

  @include media($bp-shale-small) {
    @include span-columns(6 of 10);
  }

  p {
    color: $off-black;
    font-weight: 500;
    margin: .5em 0 2em;
  }

  .byline {
    color: $dark-denim;
    font-size: .95em;
    font-style: italic;
    font-weight: 400;
    line-height: 1.3em;
  }

}

.map {
  @include span-columns(12);

  @include media($bp-shale-lg) {
    @include span-columns(4 of 10);
    @include omega();
  }

  @include media($bp-shale-med) {
    @include span-columns(4 of 10);
    @include omega();
  }

  @include media($bp-shale-small) {
    @include span-columns(4 of 10);
    @include omega();
  }

  img {
    width: 90%;
  }

  h4 {
    color: $off-black;
    text-align: center;
  }
}

